--- a/Afterclass1.html
+++ b/Afterclass1.html
@@ -8,10 +8,16 @@
     </title>
 </head>
 <body>
-    <h1>St Ives</h1>
+        <img src="images.png" style="width:300px ; height:300px"> <h1>St Ives  </h1>
     <h3><i>Welcome to St Ives the school of the future!</h3><br>
-    <h4>We offer : <br></brW><br><mark>STEM <br><br>Computing Technologies<br> <br>Coding <br> <br><del>Softwere Development</del> --> App Development</mark></i></h4><br><br>
-    <p>The school of the <b>future</b> is here where you can enroll now. This school has great staff and teachers and the oppertunities are wonderfull. We have had students from all over the <b>world</b> with a high enrollment number of <b>4000+</b> students. The state of <b>NSW</b> helps our school grow and show. The <i>NSW</i> state makes us different from other schools. We are a great public school with <b>futuristic options.</b> We stand out with our budget school and better then all <b>performance.</b> <b> <i>That is why you should chose us!</i></b></p>
+    <h4>We offer : <br></brW><br><mark>STEM <br><br>Computing Technologies<br> <br>Coding <br> <br><del>Softwere Development</del> --> App Development</mark></i></h4><br><br><img src="images.png" style="width:100px ; height:100px">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/H03wb1cZCSQ?si=CIpqivnoosuS4bkB"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <img src="images.png" style="width:100px ; height:100px">
+
+    <p>The school of the <b>future</b> is here where you can enroll now. This school has great staff and teachers and the oppertunities are wonderfull. We have had students from all over the <b>world</b> with a high enrollment number of <b>4000+</b> students. The state of <b>NSW</b> helps our school grow and show. The <i>NSW</i> state makes us different from other schools. We are a great public school with <b>futuristic options.</b> We stand out with our budget school and better then all <b>performance.</b> <b> <i>That is why you should chose us!</i></b></p><img src="images.png" style="width:500px ; height:500px">
     <small><sub><i>ALL T&C APPLY</i></sub></small>
 </body>
 </html>
